--- a/templates/ads.html
+++ b/templates/ads.html
@@ -3,7 +3,7 @@
 
 <div class="row">
     <div class="col-lg-12 text-center">
-        <h1>misAnuncios (MongoDB)<span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span></h1>
+        <h1>misAnuncios (MongoDB y Heroku)<span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span></h1>
 
     </div>
 </div>
